# routes/user.js
@@ -1,0 +1,8 @@
+const express = require("express");
+const router = express.Router();
+const jwtAuth = require("../middleware/jwtAuth");
+const userController = require("../controllers/userController");
+
+router.get("/getCurrent", jwtAuth, userController.getCurrentUser);
+
+module.exports = router;
